<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <io.vov.vitamio.widget.VideoView
        android:id="@+id/surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ImageButton
        android:id="@+id/popupwindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/pop_up_window_imagebtn"
        android:contentDescription="@string/popupwindow" />

    <RelativeLayout
        android:id="@+id/videoview_RelativeLayout_1"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0.0dip"
        android:layout_marginRight="0.0dip"
        android:background="@drawable/mediacontroller_bg_180"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/mediacontroller_back"
            android:layout_width="54.6dip"
            android:layout_height="32dip"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:contentDescription="@string/mediacontroller_back"
            android:gravity="center"
            android:src="@drawable/mediacontroller_back" />

        <LinearLayout
            android:id="@+id/battery_LinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7.0dip"
            android:gravity="center" >

            <TextView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:gravity="center"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@+id/battery_LinearLayout"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/time"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/download"
            android:layout_toRightOf="@id/mediacontroller_back"
            android:ellipsize="marquee"
            android:focusable="true"
            android:gravity="left"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/video_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_layout_loading"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/operation_volume_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#00000000"
        android:orientation="horizontal"
        android:padding="0dip"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/operation_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/operation_bg"
            android:src="@drawable/video_volumn_bg" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:paddingBottom="25dip" >

            <ImageView
                android:id="@+id/operation_full"
                android:layout_width="94dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/operation_full"
                android:src="@drawable/video_num_bg" />

            <ImageView
                android:id="@+id/operation_percent"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/operation_percent"
                android:scaleType="matrix"
                android:src="@drawable/video_num_front" />
        </FrameLayout>
    </FrameLayout>

</RelativeLayout>