<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mediacontroller_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mediacontroller_time_current"
            style="@style/MediaController_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/mediacontroller_seekbar"
            style="@style/MediaController_SeekBar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="1000" />

        <TextView
            android:id="@+id/mediacontroller_time_total"
            style="@style/MediaController_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip" >

        <TextView
            android:id="@+id/mediacontroller_file_name"
            style="@style/MediaController_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/mediacontroller_play_pause"
            android:layout_width="52dip"
            android:layout_height="52dip"
            android:layout_centerInParent="true"
            android:background="#00000000"
            android:contentDescription="@string/mediacontroller_play_pause"
            android:scaleType="fitXY"
            android:src="@drawable/mediacontroller_pause_button" />

        <ImageButton
            android:id="@+id/mediacontroller_previous"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_toLeftOf="@id/mediacontroller_play_pause"
            android:layout_marginRight="100dip"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:contentDescription="@string/mediacontroller_previous"
            android:scaleType="fitXY"
            android:src="@drawable/mediacontroller_previous_button" />

        <ImageButton
            android:id="@+id/mediacontroller_next"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dip"
            android:layout_toRightOf="@id/mediacontroller_play_pause"
            android:background="#00000000"
            android:contentDescription="@string/mediacontroller_next"
            android:scaleType="fitXY"
            android:src="@drawable/mediacontroller_next_button" />
    </RelativeLayout>

</LinearLayout>